--- a/src/assets/theme.custom.styl
+++ b/src/assets/theme.custom.styl
@@ -4,4 +4,8 @@
 @import '~nib/lib/nib/vendor'
 @import '~nib/lib/nib/gradients'
 
-color-primary = #7546C9
+color-primary = #02C29C // 青色
+// color-primary = #2fc25b // 绿色
+// color-primary = #ff96a0 // 猛男粉
+// color-primary1 = #1497f5 //蓝色
+// color-primary = #ff9814 //橙色
