--- a/src/styles/theme.custom.styl
+++ b/src/styles/theme.custom.styl
@@ -4,7 +4,9 @@
 @import '~nib/lib/nib/vendor'
 @import '~nib/lib/nib/gradients'
 
-color-primary = #02C29C // 青色
+// color-primary = #02C29C // 青色
+// color-primary = #6807FF // 紫色 antv紫
+color-primary = #7546c9 //浅紫色
 // color-primary = #2fc25b // 绿色
 // color-primary = #ff96a0 // 猛男粉
 // color-primary1 = #1497f5 //蓝色
