feat:初始化首页tab样例

--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -2,9 +2,14 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  background: #fff;
+}
+
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #bbb;
+  color    : #bbb;
   font-size: 36px;
 }
 
